--- a/src/hellofx/views/maps/dormPage.fxml
+++ b/src/hellofx/views/maps/dormPage.fxml
@@ -13,12 +13,12 @@
       prefHeight="720.0" prefWidth="1280.0" spacing="10.0" xmlns="http://javafx.com/javafx/16"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="hellofx.controller.Route">
     <AnchorPane>
-        <Label text="這裡是行政大樓">
+        <Label text="這裡是宿舍">
             <font>
                 <Font size="36.0"/>
             </font>
         </Label>
-        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#adToMap"
-                stylesheets="@../CSS/buttons.css"/>
+        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#dormToMap"
+                stylesheets="@../../styles/buttons.css"/>
     </AnchorPane>
 </VBox>
