--- a/src/hellofx/views/maps/levelPage.fxml
+++ b/src/hellofx/views/maps/levelPage.fxml
@@ -2,21 +2,20 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       prefHeight="720.0" prefWidth="1280.0" spacing="10.0" xmlns="http://javafx.com/javafx/16"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="hellofx.controller.Route">
     <AnchorPane>
-        <Label text="這裡是設定">
+        <Label text="這裡是關卡選擇">
             <font>
                 <Font size="36.0"/>
             </font>
         </Label>
-        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#settingToStart"
-                stylesheets="@../CSS/buttons.css"/>
+        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#levelToMap"
+                stylesheets="@../../styles/buttons.css"/>
     </AnchorPane>
-
 </VBox>
