--- a/src/hellofx/views/maps/mapPage.fxml
+++ b/src/hellofx/views/maps/mapPage.fxml
@@ -9,49 +9,49 @@
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="hellofx.controller.Route">
     <AnchorPane>
         <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../resource/map.png"/>
+            <Image url="@../../resource/mapPage/map.png"/>
         </ImageView>
         <Button fx:id="level" mnemonicParsing="false" layoutX="60.0" layoutY="180.0" onAction="#mapToLevel"
-                stylesheets="@../CSS/buttons.css">
+                stylesheets="@../../styles/buttons.css">
             <graphic>
                 <ImageView fitHeight="443.0" fitWidth="334.0">
-                    <Image url="@../resource/e5.png"/>
+                    <Image url="@../../resource/mapPage/e5.png"/>
                 </ImageView>
             </graphic>
         </Button>
         <Button fx:id="market" mnemonicParsing="false" layoutX="450.0" layoutY="60.0" onAction="#mapToMarket"
-                stylesheets="@../CSS/buttons.css">
+                stylesheets="@../../styles/buttons.css">
             <graphic>
                 <ImageView fitHeight="257.0" fitWidth="318.0">
-                    <Image url="@../resource/market.png"/>
+                    <Image url="@../../resource/mapPage/market.png"/>
                 </ImageView>
             </graphic>
         </Button>
         <Button fx:id="dorm" mnemonicParsing="false" layoutX="500.0" layoutY="430.0" onAction="#mapToDorm"
-                stylesheets="@../CSS/buttons.css">
+                stylesheets="@../../styles/buttons.css">
             <graphic>
                 <ImageView fitHeight="245.0" fitWidth="266.0">
-                    <Image url="@../resource/dorm.png"/>
+                    <Image url="@../../resource/mapPage/dorm.png"/>
                 </ImageView>
             </graphic>
         </Button>
         <Button fx:id="trash" mnemonicParsing="false" layoutX="820.0" layoutY="80.0" onAction="#mapToTrash"
-                stylesheets="@../CSS/buttons.css">
+                stylesheets="@../../styles/buttons.css">
             <graphic>
                 <ImageView fitHeight="218.0" fitWidth="237.0">
-                    <Image url="@../resource/trash2.png"/>
+                    <Image url="@../../resource/mapPage/trash2.png"/>
                 </ImageView>
             </graphic>
         </Button>
         <Button fx:id="ad" mnemonicParsing="false" layoutX="850.0" layoutY="340.0" onAction="#mapToAd"
-                stylesheets="@../CSS/buttons.css">
+                stylesheets="@../../styles/buttons.css">
             <graphic>
                 <ImageView fitHeight="225.0" fitWidth="352.0">
-                    <Image url="@../resource/ad.png"/>
+                    <Image url="@../../resource/mapPage/ad.png"/>
                 </ImageView>
             </graphic>
         </Button>
         <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#mapToStart"
-                stylesheets="@../CSS/buttons.css" />
+                stylesheets="@../../styles/buttons.css" />
     </AnchorPane>
 </VBox>
