--- a/src/hellofx/views/maps/trashPage.fxml
+++ b/src/hellofx/views/maps/trashPage.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.text.Font?>
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       prefHeight="720.0" prefWidth="1280.0" spacing="10.0" xmlns="http://javafx.com/javafx/16"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="hellofx.controller.Route">
     <AnchorPane>
-        <Label text="這裡是關卡選擇">
+        <Label text="這裡是垃圾場">
             <font>
                 <Font size="36.0"/>
             </font>
         </Label>
-        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#levelToMap"
-                stylesheets="@../CSS/buttons.css"/>
+        <Button fx:id="backButton" mnemonicParsing="false" layoutX="30.0" layoutY="630.0" onAction="#trashToMap"
+                stylesheets="@../../styles/buttons.css"/>
     </AnchorPane>
 </VBox>
